log
Thu 21 Mar 2024 04:46:26 PM UTC: 
 tests:  0|5
total_score: 0/70
d04704a
Thu 21 Mar 2024 04:49:14 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|4
total_score: 10/70
d5a7c57
Thu 21 Mar 2024 04:56:30 PM UTC: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:69:10: error: unused variable ‘dato’ [-Werror=unused-variable]
   69 |     int* dato = (int*)next(L);
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
51b3b02
Thu 21 Mar 2024 04:56:58 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:69:10: error: unused variable ‘dato’ [-Werror=unused-variable]
   69 |     int* dato = (int*)next(L);
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
2982907
Thu 21 Mar 2024 04:57:14 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
7f1f008
Thu 21 Mar 2024 05:45:57 PM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
exercises.c:94:1: error: expected identifier or ‘(’ before ‘}’ token
   94 | }
      | ^
Compilation failed
067976d
Thu 21 Mar 2024 05:46:07 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
a4d9383
Thu 21 Mar 2024 05:46:37 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|3
total_score: 20/70
49fa9b0
Thu 21 Mar 2024 05:46:55 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
cd3ba35
Thu 21 Mar 2024 05:48:32 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  2|3
total_score: 20/70
dd52cf8
Thu 21 Mar 2024 05:49:12 PM UTC: 
 exercises.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:91:15: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   91 |         *dato = (int*)next(L);
      |               ^
cc1: all warnings being treated as errors
Compilation failed
c7bd19f
Thu 21 Mar 2024 05:49:37 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
a42f8f5
Thu 21 Mar 2024 05:52:09 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
833c126
